// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gsFBvc jNSIOQ"
    >
      * 
    </span>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM sc-cAiakp REGOg guFxPG"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-hoHvKZ sc-gqtqYm iqRfaC hgSPxu"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <span
        class="sc-kTLoNQ lcQRjv sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj iYJVed"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      Hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
